overflow fixed

--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,16 @@
 @import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,400;0,700;1,500&display=swap");
 
-* {
+*,
+*::after,
+*::before {
   box-sizing: border-box;
   margin: 0;
 }
 
 body {
   font-family: "Rubik", sans-serif;
-  min-height: 100vh;
   overflow-x: hidden;
   background-color: hsl(0, 0%, 100%);
   height: 100vh;
+  min-height: 100vh;
 }
-
